classes update