@@ -753,7 +753,6 @@ public class Interpreter implements
     public Variable.Variant visitGetExpr(Expr.GetExpr expr) {
 
         Variable.Variant object = evaluate(expr.object);
-        boolean isStatic = object.isClass();
 
         if (!object.isRuntimeObject()) {
             throw new YsharpException(
@@ -775,25 +774,41 @@ public class Interpreter implements
             );
         }
 
-        // class itself does not need this keyword only insntaces need this keyword
-        if(!isStatic) {
-            if (field.value.isNativeFunction()) {
-                Function.NativeFunction fn = field.value.asNativeFunction();
+        if (field.value.isNativeFunction()) {
+            Function.NativeFunction fn = field.value.asNativeFunction();
 
-                BoundNativeFunction bound =
-                        new BoundNativeFunction(fn, instance, "this");
+            BoundNativeFunction bound =
+                    new BoundNativeFunction(fn, instance, "this");
 
-                return new Variable.Variant(bound);
-            }
+            return new Variable.Variant(bound);
+        }
 
-            if (field.value.isFunctionOverload()) {
-                Function.FunctionOverload fn = field.value.asFunctionOverload();
+        if (field.value.isFunctionOverload()) {
+            Function.FunctionOverload fn = field.value.asFunctionOverload();
 
-                BoundNativeFunction bound =
-                        new BoundNativeFunction(fn, instance, "this");
+            BoundNativeFunction bound =
+                    new BoundNativeFunction(fn, instance, "this");
 
-                return new Variable.Variant(bound);
-            }
+            return new Variable.Variant(bound);
+        }
+
+        if (field.value.isLambda()) {
+            Environment oldEnv = field.value.asLambda().closure;
+            Environment closure = new Environment(oldEnv);
+
+            Function.LambdaObject lambdaFn = field.value.asLambda();
+
+            Variable thisVariable = new Variable(
+                    new Variable.Variant(instance),
+                    true,
+                    "function");
+
+            closure.define("this", thisVariable);
+
+            lambdaFn.closure = closure;
+
+
+            return new Variable.Variant(lambdaFn);
         }
 
 
@@ -1689,17 +1704,18 @@ public class Interpreter implements
                 // initialize fields from super class
                 if(stmt.superName != null) {
                     // if super call explicitly override it must be first statement
-                    Stmt.BlockStmt body = (Stmt.BlockStmt)constructorFn.body;
-                    boolean explicitSuper = false;
-                    for(Stmt stmt_ : body.stmtList) {
-                        if(stmt_ instanceof Stmt.ExprStmt && ((Stmt.ExprStmt) stmt_).expr instanceof Expr.SuperCallExpr) {
-                            explicitSuper = true;
-                            break;
-                        }
-                    }
+                    boolean explicitSuper = constructorFn != null;
 
                     // super must be first
                     if(explicitSuper) {
+                        Stmt.BlockStmt body = (Stmt.BlockStmt)constructorFn.body;
+                        for(Stmt stmt_ : body.stmtList) {
+                            if(stmt_ instanceof Stmt.ExprStmt && ((Stmt.ExprStmt) stmt_).expr instanceof Expr.SuperCallExpr) {
+                                explicitSuper = true;
+                                break;
+                            }
+                        }
+
                         Stmt stmt_ = body.stmtList.getFirst();
                         if(!(stmt_ instanceof Stmt.ExprStmt && ((Stmt.ExprStmt) stmt_).expr instanceof Expr.SuperCallExpr)) {
                             throw new YsharpException(YsharpException.YsharpErrorType.PROCESS,
@@ -1724,18 +1740,28 @@ public class Interpreter implements
                             instance.set(field.getKey(), field.getValue());
                         }
                     }
+
                 }
 
                 // add instance properties of super class to child class
 
                 for(var prop :   instanceProperty) {
+
+                    if(instance.exists(prop.name.lexeme)) {
+                        Variable var = instance.get(prop.name.lexeme);
+                        if(var.enableRedeclare && prop.declType == Stmt.ClassDeclaration.Property.PropertyType.VAR) {
+                            instance.remove(prop.name.lexeme);
+                        }
+                    }
+
                     instance.set(prop.name.lexeme,
                             new Variable(
                                     prop.initializer != null ?
-                                            new Variable.Variant(interpreter.evaluate(prop.initializer).value):
+                                            new Variable.Variant(interpreter.evaluate(prop.initializer, closure).value):
                                             new Variable.Variant(null),
                                     prop.isConst,
-                                    prop.type == null ? "any" :  prop.type.lexeme));
+                                    prop.type == null ? "any" :  prop.type.lexeme,
+                                    prop.declType == Stmt.ClassDeclaration.Property.PropertyType.VAR));
                 }
 
                 if(constructorFn != null) {
@@ -1787,7 +1813,7 @@ public class Interpreter implements
 
             @Override
             public String getType() {
-                return stmt.name.lexeme;
+                return "_" + stmt.name.lexeme + "_";
             }
         };
 
@@ -1795,7 +1821,7 @@ public class Interpreter implements
 
         klass.superClassName = stmt.superName; // allowed to be null
 
-        klass.closure = this.curEnv;
+        klass.closure = new Environment(this.curEnv);
 
 
         // static methods reside in class itself
@@ -1844,10 +1870,18 @@ public class Interpreter implements
                 );
             }
 
+            if(klass.exists(prop.name.lexeme)) {
+                Variable var = klass.get(prop.name.lexeme);
+                if(var.enableRedeclare && prop.declType == Stmt.ClassDeclaration.Property.PropertyType.VAR) {
+                    klass.remove(prop.name.lexeme);
+                }
+            }
+
             klass.set(prop.name.lexeme, new Variable(
                     prop.initializer == null ? new Variable.Variant(null) : new Variable.Variant(this.evaluate(prop.initializer).value),
                     prop.isConst,
-                    prop.type == null ? "any" : prop.type.lexeme
+                    prop.type == null ? "any" : prop.type.lexeme,
+                    prop.declType == Stmt.ClassDeclaration.Property.PropertyType.VAR
             ));
         }
 
@@ -1884,7 +1918,7 @@ public class Interpreter implements
             List<Function.NativeFunction> list = instanceMethodsFn.get(key);
             if(list.size() == 1) {
                 klass.InstancePrototype.set(key, new Variable(
-                        new Variable.Variant(list.get(0)),
+                        new Variable.Variant(list.getFirst()),
                         true,
                         "function"
                 ));
